Kind/kubernetes/nginx-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: webserver
spec:
  ingressClassName: nginx
  rules:
  - host: localhost  # Specify the hostname for which the Ingress applies
    http:
      paths:
      - path: /  # Specify the path prefix
        pathType: Prefix  # Type of path matching
        backend:
          service:
            name: nginx-svc  # Name of the backend service
            port:
              number: 80  # Port number of the backend service
